--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wusht</title>
+    <title>Temporal | Site</title>
     <link rel="icon" href="king.ico">
     <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
@@ -20,8 +20,8 @@
             <video src="video/mar.mp4" muted autoplay loop></video></div>
         <div class="header-overlay"></div>
         <div class="header-content">
-            <h1>contact to me</h1>
-            <p>Hola! mi nombre es Jose Rios, y soy diseñador Web.<br> Podes enviarme un correo o comunicarte a<br> travez de mis redes sociales</p>
+            <h1>contactame!</h1>
+            <p>Hola! mi nombre es Jose Rios, y soy diseñador Web.<br> Podes comunicarte a travez de mis redes sociales</p>
             <a href="https://www.facebook.com/ian.crimson.92" target="_blank" class="btn">Facebook</a>
         </div>
     </header>
